@@ -1,4 +1,8 @@
-2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>
+2013-03-26  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* run-elf32-tests.sh: Replace bd_elf_gdb with bd_elf throughout.
+
+2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* build-elf32.sh: Build GDB.
 	* build-linux.sh: Ensure we have the right tool chain on the path.
